# NFL-Odds-Comparison

./: README.md  app.py  odds_ev_tool.py  pyproject.toml  requirements.txt
docs/: data_inputs.md  data_requirements.md
examples/: book_example.html  book_example.json
odds_ev/: __init__.py  core.py
scripts/: ingest_schedule.py
src/nfl_betting_model/: __init__.py  config.py
src/nfl_betting_model/data/: __init__.py  schemas.py  sources.py
static/: style.css
templates/: base.html  index.html
tests/: __init__.py  test_paths.py
